<resources>
    <string name="app_name">GeoWarfare</string>

    <!-- Shared among Register and Login activities -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="repeat_password_hint">Repeat password</string>

    <string name="required_field_error">Required field.</string>
    <string name="email_bad_format_error">Invalid email format.</string>
    <string name="password_bad_format_error">Minimum 8 alphanumeric characters. At least one letter and one number.</string>

    <!-- LoginActivity-->
    <string name="login_title">Login</string>
    <string name="login_button">Login</string>
    <string name="login_no_account_button"><u>Create account</u></string>

    <string name="login_progress_dialog_message">Logging in…</string>

    <string name="login_email_not_exist_error">A user with that email does not exist.</string>
    <string name="login_wrong_password_error">Incorrect password.</string>

    <!-- EditUserInfoFragment -->
    <string name="edit_user_info_title">Update your info</string>
    <string name="display_name_hint">Display name</string>
    <string name="full_name_hint">Full name</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="avatar_choose_button">Choose</string>
    <string name="edit_profile_progress_dialog_message">Updating…</string>
    <string name="edit_profile_failed_message">Unable to update profile right now.</string>

    <!-- RegisterActivity -->
    <string name="register_title">Register</string>
    <string name="register_button">Register</string>
    <string name="register_email_exists_error">This email is already in use by another account.</string>
    <string name="register_repeat_password_error">Must be same as password.</string>
    <string name="register_display_name_format_error">Must contain from 2 to 12 alphanumeric characters and begin with a letter.</string>
    <string name="register_full_name_format_error">Must contain from 2 to 30 characters. Letters and spaces allowed.</string>
    <string name="register_phone_format_error">Must contain 9 to 12 digits, optionally preceded with a "+".</string>
    <string name="register_avatar_error">Must choose an image.</string>

    <string name="register_progress_dialog_message">Registering…</string>
    <string name="register_failed_message">Unable to register at the moment.</string>

    <string name="register_storage_permission_title">Storage access required</string>
    <string name="register_storage_permission_message">The application requires access to read external storage
    in order to load an image from gallery. If you deny the permission, you can still add an avatar using your
        Camera application.</string>
    <string name="register_storage_permission_message_no_ask">In order to choose an image from gallery, the
        application requires access to read storage. Please either enable the storage permission or take a
        picture using the Camera application.</string>

    <!-- Action bar -->
    <string name="action_bar_profile">Profile</string>
    <string name="action_bar_leaderboard">Leaderboard</string>
    <string name="action_bar_about">About</string>
    <string name="action_bar_friends">Friends</string>
    <string name="action_bar_research">Research</string>
    <string name="action_bar_logout">Logout</string>
    <string name="action_bar_edit">Edit</string>
    <string name="action_bar_save">Save</string>
    <string name="action_bar_settings">Settings</string>

    <!-- MapFragment -->
    <string name="location_permission_title">Location required</string>
    <string name="location_permission_message">In order to see your position on the map, build structures
        and interact with other players, you must allow this app to access your location.</string>

    <!-- ProfileFragment -->
    <string name="profile_friend_request_button_unfriend">Unfriend</string>
    <string name="profile_friend_request_button_add">Add friend</string>
    <string name="profile_friend_request_button_cancel">Cancel request</string>
    <string name="profile_friend_request_button_accept">Accept request</string>

    <!-- FriendsFragment -->
    <string name="friend_requests_title">Friend requests</string>
    <string name="friends_title">Friends</string>
    <string name="friend_requests_empty">You don\'t have any friend requests right now.</string>
    <string name="friends_empty">You have not made any friends yet.</string>

    <!-- Friend/FriendRequest item -->
    <string name="friend_item_accept_text">Accept</string>
    <string name="friend_item_decline_text">Decline</string>

    <!-- Preferences -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_background_service_key">BackgroundService</string>
    <string name="pref_background_service_title">Background Service</string>
    <string name="pref_background_service_summary">Tracks your location and notifies you of nearby users when the app
        is not running.</string>

    <!-- BuildFragment -->
    <string name="build_title">Build</string>
    <string name="build_gold_mine_text">Gold mine</string>
    <string name="build_barracks_text">Barracks</string>

    <!-- NoLocationFragment -->
    <string name="no_location_title">Location Disabled</string>
    <string name="no_location_message">In order to play <b>GeoWarfare</b> we need you to enable Location on your
        phone. After you have done that, you will instantly be able to play. \n\nIf this screen doesn\'t
        automatically close after enabling device Location, click the button below.</string>
    <string name="no_location_button_continue">Continue</string>

    <!-- Structure common -->
    <string name="structure_upgrade_title">Upgrade</string>
    <string name="structure_upgrade_current_label">Current:</string>
    <string name="structure_upgrade_next_label">Next:</string>
    <string name="structure_no_gold_message">You don\'t have enough gold.</string>
    <string name="structure_max_level_message">/</string>
    <string name="structure_defense_title">Defense</string>
    <string name="structure_defense_transfer_empty">Insert some units first.</string>
    <string name="structure_defense_transfer_leave_btn">Leave</string>
    <string name="structure_defense_transfer_take_btn">Take</string>
    <string name="structure_defense_transfer_success">Units successfully transferred.</string>

    <string name="structure_interact_too_far">You\'re too far to interact.</string>

    <!-- GoldMineFragment -->
    <string name="gold_mine_collect_title">Collect gold</string>
    <string name="gold_mine_collect_label">Available:</string>
    <string name="gold_mine_collect_button">Take</string>

    <string name="gold_mine_empty_message">Nothing to collect at the moment.</string>

    <!-- BarracksFragment -->
    <string name="barracks_purchase_title">Purchase units</string>
    <string name="barracks_purchase_label">Available:</string>

    <string name="multiplication_sign">&#215;</string>

    <!-- AttackFragment -->
    <string name="attack_your_army_title">Your army</string>
    <string name="attack_defense_army_title">Defense</string>
    <string name="attack_button">Attack</string>

    <!-- AboutDialogFragment -->
    <string name="about_text">GeoWarfare is a never-ending geolocation-based conquest game for Android. Players move
        around the real world map, build structures, collect gold and recruit armies in order to attack and defeat
        other players.</string>
    <string name="about_credits_title">Credits</string>
    <string name="about_icons_1">designed by <b>Madebyoliver</b> from Flaticon.</string>
    <string name="about_icons_2">designed by <b>Freepik</b> from Flaticon.</string>

    <!-- ResearchFragment -->
    <string name="research_skill_label">Skill</string>
    <string name="research_level_label">Level</string>
</resources>
