<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="rs.elfak.jajac.geowarfare.activities.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <EditText
        android:id="@+id/register_email_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="@dimen/login_field_horizontal_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="@dimen/login_field_horizontal_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.494"/>

    <EditText
        android:id="@+id/register_password_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:layout_marginTop="@dimen/login_field_top_margin"
        app:layout_constraintTop_toBottomOf="@+id/register_email_text"
        app:layout_constraintLeft_toLeftOf="@+id/register_email_text"
        app:layout_constraintRight_toRightOf="@+id/register_email_text" />

    <EditText
        android:id="@+id/register_repeat_password_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/repeat_password_hint"
        android:layout_marginTop="@dimen/login_field_top_margin"
        app:layout_constraintTop_toBottomOf="@+id/register_password_text"
        app:layout_constraintLeft_toLeftOf="@+id/register_password_text"
        app:layout_constraintRight_toRightOf="@+id/register_password_text" />

    <fragment
        android:name="rs.elfak.jajac.geowarfare.fragments.EditUserInfoFragment"
        android:id="@+id/register_user_info_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_repeat_password_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout="@layout/fragment_edit_user_info"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_field_top_margin"
        app:layout_constraintTop_toBottomOf="@id/register_user_info_fragment"
        app:layout_constraintLeft_toLeftOf="@id/register_repeat_password_text"
        app:layout_constraintRight_toRightOf="@id/register_repeat_password_text"
        android:text="@string/register_button"
        android:onClick="onRegisterClick"
        android:theme="@style/PrimaryButton"/>

</android.support.constraint.ConstraintLayout>
