<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp">

    <EditText
        android:id="@+id/display_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/display_name_hint"
        android:inputType="text"
        android:layout_marginLeft="@dimen/login_field_horizontal_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="@dimen/login_field_horizontal_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/full_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|textCapWords"
        android:hint="@string/full_name_hint"
        android:layout_marginTop="@dimen/login_field_top_margin"
        app:layout_constraintTop_toBottomOf="@+id/display_name_text"
        app:layout_constraintLeft_toLeftOf="@+id/display_name_text"
        app:layout_constraintRight_toRightOf="@+id/display_name_text" />

    <EditText
        android:id="@+id/phone_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone_number_hint"
        android:layout_marginTop="@dimen/login_field_top_margin"
        app:layout_constraintTop_toBottomOf="@+id/full_name_text"
        app:layout_constraintLeft_toLeftOf="@+id/full_name_text"
        app:layout_constraintRight_toRightOf="@+id/full_name_text" />

    <ImageView
        android:id="@+id/avatar_image"
        android:layout_width="@dimen/edit_info_avatar_size"
        android:layout_height="@dimen/edit_info_avatar_size"
        android:layout_marginTop="@dimen/login_field_top_margin"
        app:layout_constraintTop_toBottomOf="@+id/phone_text"
        android:layout_marginLeft="4dp"
        app:layout_constraintLeft_toLeftOf="@+id/phone_text"
        android:scaleType="fitXY"
        android:clickable="true"
        android:background="@drawable/default_avatar"/>

    <Button
        android:id="@+id/choose_avatar_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avatar_choose_button"
        app:layout_constraintTop_toTopOf="@+id/avatar_image"
        app:layout_constraintRight_toRightOf="@+id/phone_text"
        android:drawableLeft="@drawable/ic_image_24dp"
        android:drawablePadding="8dp"
        android:theme="@style/PrimaryButton" />

    <TextView
        android:id="@+id/avatar_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="@+id/avatar_image"
        app:layout_constraintTop_toTopOf="@+id/avatar_image"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toRightOf="@+id/avatar_image" />

</android.support.constraint.ConstraintLayout>
