<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="rs.elfak.jajac.geowarfare.activities.LoginActivity">

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/login_email_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/login_image"
        android:layout_marginLeft="@dimen/login_field_horizontal_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="@dimen/login_field_horizontal_margin"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="@dimen/login_field_horizontal_margin"
        android:layout_marginEnd="@dimen/login_field_horizontal_margin" />

    <EditText
        android:id="@+id/login_password_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:layout_marginTop="@dimen/login_field_top_margin"
        app:layout_constraintTop_toBottomOf="@+id/login_email_text"
        android:layout_marginLeft="@dimen/login_field_horizontal_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="@dimen/login_field_horizontal_margin"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="@dimen/login_field_horizontal_margin"
        android:layout_marginEnd="@dimen/login_field_horizontal_margin" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_marginTop="@dimen/login_field_top_margin"
        app:layout_constraintTop_toBottomOf="@+id/login_password_text"
        app:layout_constraintLeft_toLeftOf="@id/login_password_text"
        app:layout_constraintRight_toRightOf="@id/login_password_text"
        android:onClick="onLoginClick"
        android:theme="@style/PrimaryButton" />

    <TextView
        android:id="@+id/no_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_no_account_button"
        android:layout_marginTop="@dimen/login_field_top_margin"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:clickable="true"
        android:onClick="onNoAccountClick" />

</android.support.constraint.ConstraintLayout>