<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rs.elfak.jajac.geowarfare.fragments.GoldMineFragment">

    <FrameLayout
        android:id="@+id/fragment_gold_mine_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
    </FrameLayout>


    <!-- COLLECT GOLD -->
    <GridLayout
        android:id="@+id/fragment_gold_mine_collect_upgrade_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:layout_below="@+id/fragment_gold_mine_info_container"
        android:layout_centerHorizontal="true"
        android:alignmentMode="alignBounds"
        android:columnCount="3"
        android:rowOrderPreserved="false">

        <TextView
            android:id="@+id/fragment_gold_mine_collect_title"
            android:layout_width="0dp"
            android:layout_columnSpan="3"
            android:layout_columnWeight="1"
            android:layout_marginTop="@dimen/structure_section_title_top_margin"
            android:layout_marginBottom="@dimen/structure_section_title_bottom_margin"
            android:textAlignment="center"
            android:textSize="@dimen/structure_section_title_size"
            android:text="@string/gold_mine_collect_title"/>

        <TextView
            android:id="@+id/fragment_gold_mine_collect_label"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center_vertical"
            android:textSize="@dimen/structure_label_text_size"
            android:text="@string/gold_mine_collect_label"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center_vertical|start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fragment_gold_mine_collect_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:tint="@color/colorPrimaryDark"
                android:src="@drawable/ic_coin_stack"/>

            <TextView
                android:id="@+id/fragment_gold_mine_collect_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/structure_icon_value_margin"
                android:textSize="@dimen/structure_value_text_size"
                tools:text="500"/>

        </LinearLayout>

        <Button
            android:id="@+id/fragment_gold_mine_collect_btn"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:drawableStart="@drawable/ic_money_bag"
            android:text="@string/gold_mine_collect_button"
            android:theme="@style/AccentButton"/>

        <View
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_columnSpan="3"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/structure_section_divider_top_margin"
            android:background="@color/colorDivider"/>

        <!-- UPGRADE -->
        <TextView
            android:id="@+id/fragment_gold_mine_upgrade_title"
            android:layout_width="0dp"
            android:layout_columnSpan="3"
            android:layout_columnWeight="1"
            android:layout_marginTop="@dimen/structure_section_title_top_margin"
            android:layout_marginBottom="@dimen/structure_section_title_bottom_margin"
            android:textAlignment="center"
            android:textSize="@dimen/structure_section_title_size"
            android:text="@string/structure_upgrade_title"/>

        <TextView
            android:id="@+id/fragment_gold_mine_upgrade_current_label"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center_vertical"
            android:textSize="@dimen/structure_label_text_size"
            android:text="@string/structure_upgrade_current_label"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fragment_gold_mine_upgrade_current_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:tint="@color/colorPrimaryDark"
                android:src="@drawable/ic_coin_stack"/>

            <TextView
                android:id="@+id/fragment_gold_mine_upgrade_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/structure_icon_value_margin"
                android:textSize="@dimen/structure_value_text_size"
                tools:text="500"/>

        </LinearLayout>

        <Button
            android:id="@+id/fragment_gold_mine_upgrade_btn"
            android:layout_width="0dp"
            android:layout_rowSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/ic_coin_stack"
            android:textSize="@dimen/structure_value_text_size"
            tools:text="5000"
            android:theme="@style/AccentButton"
            android:visibility="invisible"/>

        <!-- NEXT LEVEL -->
        <TextView
            android:id="@+id/fragment_gold_mine_upgrade_next_label"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/structure_upgrade_label_vertical_margin"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center_vertical"
            android:textSize="@dimen/structure_label_text_size"
            android:text="@string/structure_upgrade_next_label"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fragment_gold_mine_upgrade_next_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:tint="@color/colorPrimaryDark"
                android:src="@drawable/ic_coin_stack"/>

            <TextView
                android:id="@+id/fragment_gold_mine_upgrade_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/structure_icon_value_margin"
                android:textSize="@dimen/structure_value_text_size"
                tools:text="500"/>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_columnSpan="3"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/structure_section_divider_top_margin"
            android:background="@color/colorDivider"/>

    </GridLayout>

    <FrameLayout
        android:id="@+id/fragment_gold_mine_defense_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_gold_mine_collect_upgrade_container">
    </FrameLayout>

</RelativeLayout>
